--- a/.github/workflows/cmake.yaml
+++ b/.github/workflows/cmake.yaml
@@ -12,8 +12,9 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
-      - run: cmake . -DPATCH_VERSION=${{ github.run_number }} 
-      - run: cmake --build . --target package
+      - run: cmake . 
+      - run: cmake --build . 
+
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -22,8 +23,7 @@ jobs:
         with:
           tag_name: ${{ github.run_number }}
           release_name: Release ${{ github.run_number }}
-          draft: false
-          prerelease: false
+
       - name: Upload Release Asset
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
