--- a/.github/workflows/cmake.yaml
+++ b/.github/workflows/cmake.yaml
@@ -11,6 +11,7 @@ jobs:
       - uses: actions/checkout@v3
       - run: cmake . 
       - run: ls
+      - run: pwd
       - run: cmake --build . 
 
       - name: Create Release
@@ -29,6 +30,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./async-0.0.${{ github.run_number }}-Linux.deb
-          asset_name: async-0.0.${{ github.run_number }}-Linux.deb
+          asset_path: ./async
+          asset_name: async
           asset_content_type: application/vnd.debian.binary-package
