--- a/.github/workflows/cmake.yaml
+++ b/.github/workflows/cmake.yaml
@@ -9,7 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - run: cmake . 
+      - run: mkdir build
+      - run: cd build
+      - run: cmake .. 
       - run: ls
       - run: pwd
       - run: cmake --build . 
