--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,7 +14,9 @@ add_library(async SHARED
                   util/Util.h
                   util/Util.cpp
                   FlushCommandListener.h)
-                
+     
+                  
+add_executable(async_lib main.cpp)
 # add_library(command SHARED 
 #                     FlushCommandListener.h
 #                   com/CommandProcessingFacade.h
@@ -32,16 +34,16 @@ add_library(async SHARED
 #                   util/Util.h
 #                   util/Util.cpp )
 
-target_include_directories(
-                async
-                PRIVATE
-                ${CMAKE_CURRENT_SOURCE_DIR}/writer
-                ${CMAKE_CURRENT_SOURCE_DIR}/async
-                ${CMAKE_CURRENT_SOURCE_DIR}/util
-                ${CMAKE_CURRENT_SOURCE_DIR}/com
-                ${CMAKE_CURRENT_SOURCE_DIR})
+# target_include_directories(
+#                 async
+#                 PRIVATE
+#                 ${CMAKE_CURRENT_SOURCE_DIR}/writer
+#                 ${CMAKE_CURRENT_SOURCE_DIR}/async
+#                 ${CMAKE_CURRENT_SOURCE_DIR}/util
+#                 ${CMAKE_CURRENT_SOURCE_DIR}/com
+#                 ${CMAKE_CURRENT_SOURCE_DIR})
 
-add_executable(async_lib main.cpp)
+
 set_target_properties(async_lib PROPERTIES OUTPUT_NAME async PUBLIC_HEADER asynchronously/async.h)
 
 # set_target_properties(async_cli PROPERTIES OUTPUT_NAME command)
@@ -51,3 +53,14 @@ set_target_properties(async_lib PROPERTIES OUTPUT_NAME async PUBLIC_HEADER async
 find_package(Threads REQUIRED)
 target_link_libraries(async_lib PRIVATE async Threads::Threads)
 
+#BEGIN release
+install(TARGETS async_lib async)
+
+set(CPACK_GENERATOR DEB)
+
+set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
+set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
+set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
+
+include(CPack)
+#END
