--- a/.github/workflows/cmake.yaml
+++ b/.github/workflows/cmake.yaml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v3
       - run: cmake . -DPATCH_VERSION=${{ github.run_number }}
       - run: cmake --build .
-      - run: cmake --build . --target package
+      - run: cmake --build .
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
