--- a/.github/workflows/cmake.yaml
+++ b/.github/workflows/cmake.yaml
@@ -30,6 +30,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./async
+          asset_path: .src/async
           asset_name: async
           asset_content_type: application/vnd.debian.binary-package
