--- a/.github/workflows/cmake.yaml
+++ b/.github/workflows/cmake.yaml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v3
       - run: cmake . -DPATCH_VERSION=${{ github.run_number }}
       - run: cmake --build .
-      - run: cmake --build .
+      - run: cmake --build . 
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -30,6 +30,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: .src/async
+          asset_path: ./src/async
           asset_name: async
           asset_content_type: application/vnd.debian.binary-package
